--- a/index.html
+++ b/index.html
@@ -18,58 +18,58 @@
         <div class="menu-item__redo">
           <i></i>
         </div>
-        <div class="menu-item__painter" title="格式刷(双击可连续使用)">
+        <div class="menu-item__painter" title="Format Painter (double-click for continuous use)">
           <i></i>
         </div>
-        <div class="menu-item__format" title="清除格式">
+        <div class="menu-item__format" title="Clear Format">
           <i></i>
         </div>
       </div>
       <div class="menu-divider"></div>
       <div class="menu-item">
         <div class="menu-item__font">
-          <span class="select" title="字体">微软雅黑</span>
+          <span class="select" title="Font">Arial</span>
           <div class="options">
             <ul>
-              <li data-family="Microsoft YaHei" style="font-family:'Microsoft YaHei';">微软雅黑</li>
-              <li data-family="华文宋体" style="font-family:'华文宋体';">华文宋体</li>
-              <li data-family="华文黑体" style="font-family:'华文黑体';">华文黑体</li>
-              <li data-family="华文仿宋" style="font-family:'华文仿宋';">华文仿宋</li>
-              <li data-family="华文楷体" style="font-family:'华文楷体';">华文楷体</li>
-              <li data-family="华文琥珀" style="font-family:'华文琥珀';">华文琥珀</li>
-              <li data-family="华文楷体" style="font-family:'华文楷体';">华文楷体</li>
-              <li data-family="华文隶书" style="font-family:'华文隶书';">华文隶书</li>
-              <li data-family="华文新魏" style="font-family:'华文新魏';">华文新魏</li>
-              <li data-family="华文行楷" style="font-family:'华文行楷';">华文行楷</li>
-              <li data-family="华文中宋" style="font-family:'华文中宋';">华文中宋</li>
-              <li data-family="华文彩云" style="font-family:'华文彩云';">华文彩云</li>
               <li data-family="Arial" style="font-family:'Arial';">Arial</li>
+              <li data-family="Times New Roman" style="font-family:'Times New Roman';">Times New Roman</li>
+              <li data-family="Georgia" style="font-family:'Georgia';">Georgia</li>
+              <li data-family="Verdana" style="font-family:'Verdana';">Verdana</li>
+              <li data-family="Tahoma" style="font-family:'Tahoma';">Tahoma</li>
+              <li data-family="Trebuchet MS" style="font-family:'Trebuchet MS';">Trebuchet MS</li>
+              <li data-family="Courier New" style="font-family:'Courier New';">Courier New</li>
               <li data-family="Segoe UI" style="font-family:'Segoe UI';">Segoe UI</li>
+              <li data-family="Calibri" style="font-family:'Calibri';">Calibri</li>
+              <li data-family="Cambria" style="font-family:'Cambria';">Cambria</li>
+              <li data-family="Consolas" style="font-family:'Consolas';">Consolas</li>
+              <li data-family="Impact" style="font-family:'Impact';">Impact</li>
+              <li data-family="Comic Sans MS" style="font-family:'Comic Sans MS';">Comic Sans MS</li>
               <li data-family="Ink Free" style="font-family:'Ink Free';">Ink Free</li>
               <li data-family="Fantasy" style="font-family:'Fantasy';">Fantasy</li>
+              <li data-family="Microsoft YaHei" style="font-family:'Microsoft YaHei';">Microsoft YaHei</li>
             </ul>
           </div>
         </div>
         <div class="menu-item__size">
-          <span class="select" title="字体">小四</span>
+          <span class="select" title="Font Size">16</span>
           <div class="options">
             <ul>
-              <li data-size="56">初号</li>
-              <li data-size="48">小初</li>
-              <li data-size="34">一号</li>
-              <li data-size="32">小一</li>
-              <li data-size="29">二号</li>
-              <li data-size="24">小二</li>
-              <li data-size="21">三号</li>
-              <li data-size="20">小三</li>
-              <li data-size="18">四号</li>
-              <li data-size="16">小四</li>
-              <li data-size="14">五号</li>
-              <li data-size="12">小五</li>
-              <li data-size="10">六号</li>
-              <li data-size="8">小六</li>
-              <li data-size="7">七号</li>
-              <li data-size="6">八号</li>
+              <li data-size="8">8</li>
+              <li data-size="9">9</li>
+              <li data-size="10">10</li>
+              <li data-size="11">11</li>
+              <li data-size="12">12</li>
+              <li data-size="14">14</li>
+              <li data-size="16">16</li>
+              <li data-size="18">18</li>
+              <li data-size="20">20</li>
+              <li data-size="22">22</li>
+              <li data-size="24">24</li>
+              <li data-size="26">26</li>
+              <li data-size="28">28</li>
+              <li data-size="36">36</li>
+              <li data-size="48">48</li>
+              <li data-size="72">72</li>
             </ul>
           </div>
         </div>
@@ -108,7 +108,7 @@
             </ul>
           </div>
         </div>
-        <div class="menu-item__strikeout" title="删除线(Ctrl+Shift+X)">
+        <div class="menu-item__strikeout" title="Strikeout (Ctrl+Shift+X)">
           <i></i>
         </div>
         <div class="menu-item__superscript">
@@ -117,12 +117,12 @@
         <div class="menu-item__subscript">
           <i></i>
         </div>
-        <div class="menu-item__color" title="字体颜色">
+        <div class="menu-item__color" title="Font Color">
           <i></i>
           <span></span>
           <input type="color" id="color" />
         </div>
-        <div class="menu-item__highlight" title="高亮">
+        <div class="menu-item__highlight" title="Highlight">
           <i></i>
           <span></span>
           <input type="color" id="highlight">
@@ -132,16 +132,16 @@
       <div class="menu-item">
         <div class="menu-item__title">
           <i></i>
-          <span class="select" title="切换标题">正文</span>
+          <span class="select" title="Switch Title">Normal</span>
           <div class="options">
             <ul>
-              <li style="font-size:16px;">正文</li>
-              <li data-level="first" style="font-size:26px;">标题1</li>
-              <li data-level="second" style="font-size:24px;">标题2</li>
-              <li data-level="third" style="font-size:22px;">标题3</li>
-              <li data-level="fourth" style="font-size:20px;">标题4</li>
-              <li data-level="fifth" style="font-size:18px;">标题5</li>
-              <li data-level="sixth" style="font-size:16px;">标题6</li>
+              <li style="font-size:16px;">Normal</li>
+              <li data-level="first" style="font-size:26px;">Heading 1</li>
+              <li data-level="second" style="font-size:24px;">Heading 2</li>
+              <li data-level="third" style="font-size:22px;">Heading 3</li>
+              <li data-level="fourth" style="font-size:20px;">Heading 4</li>
+              <li data-level="fifth" style="font-size:18px;">Heading 5</li>
+              <li data-level="sixth" style="font-size:16px;">Heading 6</li>
             </ul>
           </div>
         </div>
@@ -161,7 +161,7 @@
           <i></i>
         </div>
         <div class="menu-item__row-margin">
-          <i title="行间距"></i>
+          <i title="Line Spacing"></i>
           <div class="options">
             <ul>
               <li data-rowmargin='1'>1</li>
@@ -179,34 +179,34 @@
           <div class="options">
             <ul>
               <li>
-                <label>取消列表</label>
+                <label>Remove List</label>
               </li>
               <li data-list-type="ol" data-list-style='decimal'>
-                <label>有序列表：</label>
+                <label>Ordered List:</label>
                 <ol>
                   <li>________</li>
                 </ol>
               </li>
               <li data-list-type="ul" data-list-style='checkbox'>
-                <label>复选框列表：</label>
+                <label>Checkbox List:</label>
                 <ul style="list-style-type: '☑️ ';">
                   <li>________</li>
                 </ul>
               </li>
               <li data-list-type="ul" data-list-style='disc'>
-                <label>实心圆点列表：</label>
+                <label>Disc List:</label>
                 <ul style="list-style-type: disc;">
                   <li>________</li>
                 </ul>
               </li>
               <li data-list-type="ul" data-list-style='circle'>
-                <label>空心圆点列表：</label>
+                <label>Circle List:</label>
                 <ul style="list-style-type: circle;">
                   <li>________</li>
                 </ul>
               </li>
               <li data-list-type="ul" data-list-style='square'>
-                <label>空心方块列表：</label>
+                <label>Square List:</label>
                 <ul style="list-style-type: '☐ ';">
                   <li>________</li>
                 </ul>
@@ -218,25 +218,25 @@
       <div class="menu-divider"></div>
       <div class="menu-item">
         <div class="menu-item__table">
-          <i title="表格"></i>
+          <i title="Table"></i>
         </div>
         <div class="menu-item__table__collapse">
           <div class="table-close">×</div>
           <div class="table-title">
-            <span class="table-select">插入</span>
-            <span>表格</span>
+            <span class="table-select">Insert</span>
+            <span>Table</span>
           </div>
           <div class="table-panel"></div>
         </div>
         <div class="menu-item__image">
-          <i title="图片"></i>
+          <i title="Image"></i>
           <input type="file" id="image" accept=".png, .jpg, .jpeg, .svg, .gif">
         </div>
         <div class="menu-item__hyperlink">
-          <i title="超链接"></i>
+          <i title="Hyperlink"></i>
         </div>
         <div class="menu-item__separator">
-          <i title="分割线"></i>
+          <i title="Separator"></i>
           <div class="options">
             <ul>
               <li data-separator='0,0'>
@@ -261,44 +261,44 @@
           </div>
         </div>
         <div class="menu-item__watermark">
-          <i title="水印(添加、删除)"></i>
+          <i title="Watermark (Add/Delete)"></i>
           <div class="options">
             <ul>
-              <li data-menu="add">添加水印</li>
-              <li data-menu="delete">删除水印</li>
+              <li data-menu="add">Add Watermark</li>
+              <li data-menu="delete">Delete Watermark</li>
             </ul>
           </div>
         </div>
-        <div class="menu-item__codeblock" title="代码块">
+        <div class="menu-item__codeblock" title="Code Block">
           <i></i>
         </div>
-        <div class="menu-item__page-break" title="分页符">
+        <div class="menu-item__page-break" title="Page Break">
           <i></i>
         </div>
         <div class="menu-item__control">
-          <i title="控件"></i>
+          <i title="Control"></i>
           <div class="options">
             <ul>
-              <li data-control='text'>文本</li>
-              <li data-control="number">数值</li>
-              <li data-control="select">列举</li>
-              <li data-control="date">日期</li>
-              <li data-control="checkbox">复选框</li>
-              <li data-control="radio">单选框</li>
+              <li data-control='text'>Text</li>
+              <li data-control="number">Number</li>
+              <li data-control="select">Select</li>
+              <li data-control="date">Date</li>
+              <li data-control="checkbox">Checkbox</li>
+              <li data-control="radio">Radio</li>
             </ul>
           </div>
         </div>
-        <div class="menu-item__checkbox" title="复选框">
+        <div class="menu-item__checkbox" title="Checkbox">
           <i></i>
         </div>
-        <div class="menu-item__radio" title="单选框">
+        <div class="menu-item__radio" title="Radio">
           <i></i>
         </div>
-        <div class="menu-item__latex" title="LateX">
+        <div class="menu-item__latex" title="LaTeX">
           <i></i>
         </div>
         <div class="menu-item__date">
-          <i title="日期"></i>
+          <i title="Date"></i>
           <div class="options">
             <ul>
               <li data-format="yyyy-MM-dd"></li>
@@ -306,7 +306,7 @@
             </ul>
           </div>
         </div>
-        <div class="menu-item__block" title="内容块">
+        <div class="menu-item__block" title="Content Block">
           <i></i>
         </div>
       </div>
@@ -329,16 +329,16 @@
           </div>
           <div class="menu-item__search__collapse__replace">
             <input type="text">
-            <button>替换</button>
+            <button>Replace</button>
           </div>
           <div class="menu-item__search__collapse__option">
             <div class="search-option-item">
               <input type="checkbox" id="option-reg" checked />
-              <label for="option-reg">正则</label>
+              <label for="option-reg">Regex</label>
             </div>
             <div class="search-option-item">
               <input type="checkbox" id="option-case" checked />
-              <label for="option-case">忽略大小写</label>
+              <label for="option-case">Ignore Case</label>
             </div>
           </div>
         </div>
@@ -349,7 +349,7 @@
     </div>
     <div class="catalog" editor-component="catalog">
       <div class="catalog__header">
-        <span>目录</span>
+        <span>Catalog</span>
         <div class="catalog__header__close">
           <i></i>
         </div>
@@ -360,66 +360,66 @@
     <div class="comment" editor-component="comment"></div>
     <div class="footer" editor-component="footer">
       <div>
-        <div class="catalog-mode" title="目录">
+        <div class="catalog-mode" title="Catalog">
           <i></i>
         </div>
         <div class="page-mode">
-          <i title="页面模式(分页、连页)"></i>
+          <i title="Page Mode (Paging/Continuous)"></i>
           <div class="options">
             <ul>
-              <li data-page-mode="paging" class="active">分页</li>
-              <li data-page-mode="continuity">连页</li>
+              <li data-page-mode="paging" class="active">Paging</li>
+              <li data-page-mode="continuity">Continuous</li>
             </ul>
           </div>
         </div>
-        <span>可见页码：<span class="page-no-list">1</span></span>
-        <span>页面：<span class="page-no">1</span>/<span class="page-size">1</span></span>
-        <span>字数：<span class="word-count">0</span></span>
-        <span>行：<span class="row-no">0</span></span>
-        <span>列：<span class="col-no">0</span></span>
+        <span>Visible Pages: <span class="page-no-list">1</span></span>
+        <span>Page: <span class="page-no">1</span>/<span class="page-size">1</span></span>
+        <span>Words: <span class="word-count">0</span></span>
+        <span>Row: <span class="row-no">0</span></span>
+        <span>Col: <span class="col-no">0</span></span>
       </div>
-      <div class="editor-mode" title="编辑模式(编辑、清洁、只读、表单、设计、涂鸦)">编辑模式</div>
+      <div class="editor-mode" title="Editor Mode (Edit, Clean, Readonly, Form, Design, Graffiti)">Edit Mode</div>
       <div>
-        <div class="page-scale-minus" title="缩小(Ctrl+-)">
+        <div class="page-scale-minus" title="Zoom Out (Ctrl+-)">
           <i></i>
         </div>
-        <span class="page-scale-percentage" title="显示比例(点击可复原Ctrl+0)">100%</span>
-        <div class="page-scale-add" title="放大(Ctrl+=)">
+        <span class="page-scale-percentage" title="Scale (click to reset Ctrl+0)">100%</span>
+        <div class="page-scale-add" title="Zoom In (Ctrl+=)">
           <i></i>
         </div>
         <div class="paper-size">
-          <i title="纸张类型"></i>
+          <i title="Paper Size"></i>
           <div class="options">
             <ul>
               <li data-paper-size="794*1123" class="active">A4</li>
               <li data-paper-size="1593*2251">A2</li>
               <li data-paper-size="1125*1593">A3</li>
               <li data-paper-size="565*796">A5</li>
-              <li data-paper-size="412*488">5号信封</li>
-              <li data-paper-size="450*866">6号信封</li>
-              <li data-paper-size="609*862">7号信封</li>
-              <li data-paper-size="862*1221">9号信封</li>
-              <li data-paper-size="813*1266">法律用纸</li>
-              <li data-paper-size="813*1054">信纸</li>
+              <li data-paper-size="412*488">Envelope #5</li>
+              <li data-paper-size="450*866">Envelope #6</li>
+              <li data-paper-size="609*862">Envelope #7</li>
+              <li data-paper-size="862*1221">Envelope #9</li>
+              <li data-paper-size="813*1266">Legal</li>
+              <li data-paper-size="813*1054">Letter</li>
             </ul>
           </div>
         </div>
         <div class="paper-direction">
-          <i title="纸张方向"></i>
+          <i title="Paper Direction"></i>
           <div class="options">
             <ul>
-              <li data-paper-direction="vertical" class="active">纵向</li>
-              <li data-paper-direction="horizontal">横向</li>
+              <li data-paper-direction="vertical" class="active">Portrait</li>
+              <li data-paper-direction="horizontal">Landscape</li>
             </ul>
           </div>
         </div>
-        <div class="paper-margin" title="页边距">
+        <div class="paper-margin" title="Page Margin">
           <i></i>
         </div>
-        <div class="fullscreen" title="全屏显示">
+        <div class="fullscreen" title="Fullscreen">
           <i></i>
         </div>
-        <div class="editor-option" title="编辑器设置">
+        <div class="editor-option" title="Editor Settings">
           <i></i>
         </div>
       </div>
