feat: integrate ShapeEngine into editor measurement & rendering pipeline
- Add IShapingOption/IFontMapping interfaces and default constants
- Add shaping option to IEditorOption with feature flag (disabled by default)
- Extend ShapeEngine with font registry (registerFont, ensureFontLoaded, isFontReady)
- Wire ShapeEngine init in Draw.ts with async font loading and auto re-render
- Integrate ShapeEngine into TextParticle measureText() and _render()
  - Width from HarfBuzz shaping, vertical metrics from Canvas API
  - Glyph-by-glyph path rendering via OpenType.js when shaping ready
  - Transparent fallback to ctx.fillText() for unmapped fonts
- Export IShapingOption/IFontMapping from editor index
- Add Noto Sans font (Apache 2.0) for live testing
- Add @font-face and font picker entry for Noto Sans
- Enable shaping in mock.ts with Noto Sans font mapping
- Add test-shaping-integration.html for interactive testing
- Update .ai/ documentation with progress

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
   <link rel="icon" type="image/png" href="favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>canvas-editor</title>
+  <style>
+    @font-face {
+      font-family: 'Noto Sans';
+      src: url('/canvas-editor/fonts/NotoSans-Regular.ttf') format('truetype');
+      font-weight: 100 900;
+      font-style: normal;
+    }
+  </style>
 </head>
 
 <body>
@@ -31,6 +39,7 @@
           <span class="select" title="Font">Arial</span>
           <div class="options">
             <ul>
+              <li data-family="Noto Sans" style="font-family:'Noto Sans';">Noto Sans</li>
               <li data-family="Arial" style="font-family:'Arial';">Arial</li>
               <li data-family="Times New Roman" style="font-family:'Times New Roman';">Times New Roman</li>
               <li data-family="Georgia" style="font-family:'Georgia';">Georgia</li>
