feat: automatic font fallback for complex scripts
- Add complexScriptFallback option to IShapingOption (default: 'Amiri')
- Add ShapeEngine.resolveWithFallback()  returns fallback font when
  the requested font isn't registered in fontMapping
- Update _resolveShapingFontId() to detect complex-script text and
  auto-fallback (e.g. user selects Arial, types Arabic  Amiri is used)
- Update _render() to re-resolve font with accumulated text context
- Remove explicit font:'Amiri' from mock data  fallback handles it
- Invisible to user: toolbar still shows their selected font name

Flow: user selects 'Arial'  types Arabic  needsComplexShaping()=true
 Arial not in fontMapping  fallback to Amiri  ShapeEngine renders

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
           <span class="select" title="Font">Arial</span>
           <div class="options">
             <ul>
+              <li data-family="Amiri" style="font-family:'Amiri';">Amiri</li>
               <li data-family="Noto Sans" style="font-family:'Noto Sans';">Noto Sans</li>
               <li data-family="Arial" style="font-family:'Arial';">Arial</li>
               <li data-family="Times New Roman" style="font-family:'Times New Roman';">Times New Roman</li>
